# airspace-pulse

./: Cargo.toml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ActiveAircraft.tsx  AircraftCard.tsx  AircraftStatusBadge.tsx  CityCard.tsx  DevModeProvider.tsx  EventCard.tsx  EventDetails.tsx  EventDetailsSheet.tsx  EventFeed.tsx  Header.tsx  MetricsRow.tsx  MonitoringView.tsx  SearchBar.tsx  SearchView.tsx  SelectedCityCard.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  sheet.tsx
frontend/src/hooks/: useAirspaceStore.ts  useCitySearch.ts  useDevMode.ts  useEventStream.ts  useIsMobile.ts
frontend/src/lib/: aircraft-status.ts  bbox.ts  categories.ts  event-display.ts  event-meta.ts
frontend/src/types/: event.ts
src/: api.rs  event.rs  main.rs  model.rs  opensky.rs  state.rs
