[package]
name = "airspace-pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
